--- a/Ekrut - client/src/fxml/CreateCustomer.fxml
+++ b/Ekrut - client/src/fxml/CreateCustomer.fxml
@@ -38,7 +38,7 @@
                </font>
             </Label>
             <Separator layoutX="75.0" layoutY="42.0" prefHeight="3.0" prefWidth="190.0" />
-            <Button fx:id="btnCreate" alignment="CENTER" contentDisplay="TOP" layoutX="95.0" layoutY="333.0" mnemonicParsing="false" onAction="#customerCreate" prefHeight="54.0" prefWidth="183.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Create Customer">
+            <Button fx:id="btnCreate" alignment="CENTER" contentDisplay="TOP" disable="true" layoutX="95.0" layoutY="333.0" mnemonicParsing="false" onAction="#customerCreate" prefHeight="54.0" prefWidth="183.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Create Customer">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
