--- a/Ekrut - client/src/fxml/EditUser.fxml
+++ b/Ekrut - client/src/fxml/EditUser.fxml
@@ -18,11 +18,6 @@
             <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="145.0" fitWidth="138.0" layoutX="848.0" layoutY="-15.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/EKrut%20logo.png" />
-         </image>
-      </ImageView>
       <Label layoutX="342.0" layoutY="14.0" text="Users List">
          <font>
             <Font name="System Bold Italic" size="36.0" />
@@ -65,7 +60,7 @@
             <TextField fx:id="txtUser" layoutX="94.0" layoutY="67.0" prefHeight="26.0" prefWidth="96.0" />
             <TextField fx:id="txtPassword" layoutX="94.0" layoutY="98.0" prefHeight="26.0" prefWidth="96.0" />
             <TextField fx:id="txtRole" layoutX="94.0" layoutY="129.0" prefHeight="26.0" prefWidth="96.0" />
-            <Button fx:id="btnUpdate" alignment="CENTER" contentDisplay="TOP" layoutX="23.0" layoutY="377.0" mnemonicParsing="false" onAction="#updateUser" prefHeight="54.0" prefWidth="157.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Update">
+            <Button fx:id="btnUpdate" alignment="CENTER" contentDisplay="TOP" disable="true" layoutX="23.0" layoutY="377.0" mnemonicParsing="false" onAction="#updateUser" prefHeight="54.0" prefWidth="157.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Update">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -94,6 +89,11 @@
             <TextField fx:id="txtPhone" layoutX="94.0" layoutY="191.0" prefHeight="26.0" prefWidth="96.0" />
             <TextField fx:id="txtAddress" layoutX="94.0" layoutY="223.0" prefHeight="26.0" prefWidth="96.0" />
             <TextField fx:id="txtEmail" layoutX="94.0" layoutY="256.0" prefHeight="26.0" prefWidth="96.0" />
+            <Label fx:id="errLbl" layoutX="25.0" layoutY="345.0" prefHeight="18.0" prefWidth="141.0" textFill="RED">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
       <AnchorPane layoutX="14.0" layoutY="87.0" prefHeight="479.0" prefWidth="782.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000; -fx-border-width: 2;">
