--- a/Ekrut - client/src/fxml/ChooseReportScreen.fxml
+++ b/Ekrut - client/src/fxml/ChooseReportScreen.fxml
@@ -22,7 +22,7 @@
          </font></Label>
       <ImageView fitHeight="112.0" fitWidth="150.0" layoutX="32.0" layoutY="195.0" onMouseClicked="#StockStatusReportImgClick">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/stock.png" />
+            <Image url="@../../images/stock.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="121.0" fitWidth="169.0" layoutX="195.0" layoutY="200.0" onMouseClicked="#OrdersReportImgClick">
