--- a/Ekrut - client/src/fxml/OrderPaymentScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderPaymentScreen.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseExited="#onMouseExit" onMouseMoved="#onMouseMove" prefHeight="400.0" prefWidth="625.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaymentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="625.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaymentController">
    <children>
-      <ListView fx:id="listView" layoutX="259.0" layoutY="26.0" onMouseMoved="#onMouseMove" prefHeight="243.0" prefWidth="352.0" style="-fx-border-radius: 25; -fx-background-radius: 25;">
+      <ListView fx:id="listView" layoutX="259.0" layoutY="26.0" prefHeight="243.0" prefWidth="352.0" style="-fx-border-radius: 25; -fx-background-radius: 25;">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding></ListView>
