--- a/Ekrut - client/src/fxml/OrderPaymentScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderPaymentScreen.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -64,5 +65,6 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Button>
+      <ProgressBar fx:id="pb" layoutX="255.0" layoutY="364.0" prefHeight="18.0" prefWidth="131.0" progress="1.0" />
    </children>
 </AnchorPane>
