--- a/Ekrut - client/src/fxml/OrderScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderScreen.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -60,5 +61,6 @@
          </font>
       </Text>
       <Line fx:id="line" endX="74.21875" endY="5.0" layoutX="698.0" layoutY="425.0" startX="-80.78125" startY="5.0" />
+      <ProgressBar fx:id="pb" layoutX="354.0" layoutY="493.0" prefHeight="18.0" prefWidth="131.0" progress="1.0" />
    </children>
 </AnchorPane>
