--- a/Ekrut - client/src/fxml/OrderPaymentScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderPaymentScreen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
@@ -66,5 +67,6 @@
          </font>
       </Button>
       <ProgressBar fx:id="pb" layoutX="255.0" layoutY="364.0" prefHeight="18.0" prefWidth="131.0" progress="1.0" />
+      <CheckBox fx:id="cboxDelayedPayment" layoutX="301.0" layoutY="297.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="117.0" text="Delayed payment" visible="false" />
    </children>
 </AnchorPane>
